# HelloCMake

./: CMakeLists.txt  build.bat  build.sh
libs/foo/: CMakeLists.txt  foo.cpp
src/: main.cpp
src/aaa/: aaa.cpp  aaa.h
src/bbb/: bbb.cpp  bbb.h
